# src/types/IPAddress.ts
@@ -1,9 +1,0 @@
-import { User } from "./User";
-
-export type IPAddress = {
-	id: number;
-	ip: string;
-	label: string;
-	createdAt: string;
-	createdBy?: User;
-};
